# gdfe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/bouncing/: main.c
examples/io/: main.c
examples/scene/: main.c
include/: asserts.h  camera.h  core.h  def.h  event.h  gdfe.h  geometry.h  input.h  light.h  logging.h  mem.h  profiler.h  subsystems.h  ui.h
include/async/: thread_pool.h
include/collections/: carr.h  hashmap.h  list.h  set.h
include/gdfe/: asserts.h  camera.h  core.h  def.h  event.h  gdfe.h  geometry.h  input.h  light.h  logging.h  mem.h  prelude.h  profiler.h  storage.h  strutils.h  subsystems.h  video.h
include/gdfe/async/: thread_pool.h
include/gdfe/collections/: carr.h  hashmap.h  list.h  set.h
include/gdfe/math/: math.h  math_types.h
include/gdfe/os/: io.h  misc.h  socket.h  sysinfo.h  thread.h  video.h  window.h
include/gdfe/render/: camera.h  geometry.h  mesh.h  renderer.h  shader.h  ui.h  vk_types.h  vk_utils.h
include/gdfe/render/vk/: buffers.h  image.h  pipelines.h  shader.h  types.h  utils.h
include/gdfe/serde/: key.h  map.h  serde.h
include/gdfe/time/: stopwatch.h
include/math/: math.h  math_types.h
include/os/: io.h  socket.h  sysinfo.h  thread.h  window.h
include/render/: renderer.h  vk_types.h  vk_utils.h
include/render/vk/: buffers.h  image.h  renderer.h  utils.h
include/serde/: key.h  map.h  serde.h
include/sync/: rwlock.h
include/time/: stopwatch.h
resources/shaders/: objects.frag  objects.vert
src/: event.c  gdfe.c  logging.c  mem.c  storage.c  strutils.c  subsystems.c  ui.c  video.c
src/async/: thread_pool.c
src/collections/: carr.c  hashmap.c  list.c  set.c
src/hash/: superfasthash.c
src/input/: input.c  internal.h
src/internal/: i_gdfe.h  i_input.h  i_subsystems.h  i_video.h
src/internal/i_render/: camera.h  core_renderer.h  gpu_types.h  mesh.h  renderer.h  types.h  vk_os.h  vk_utils.h
src/internal/irender/: camera.h  core_renderer.h  renderer.h  vk_os.h  vk_utils.h
src/math/: math.c
src/os/: io_linux.c  io_win32.c  misc_linux.c  misc_win32.c  socket_linux.c  socket_win32.c  sysinfo_linux.c  sysinfo_win32.c  thread_linux.c  thread_win32.c  video_linux.c  video_win32.c  window_internal.h  window_linux.c  window_win32.c
src/render/: buffers.c  camera.c  core_renderer.c  core_renderer.h  device.c  global_bufs.c  gpu_types.h  image.c  mesh.c  os.h  pipelines.c  renderer.c  shader.c  swapchain.c  utils.c  vk_init.c  vk_init_and_destroy.c
src/render/core/: descriptors_init.c  framebufs_and_imgs.c  global_bufs.c  imgs_init.c  pipelines.c  pipelines_init.c  render_passes.c
src/render/vk/: buffers.c  game_renderer.c  renderer.c  utils.c
src/serde/: key.c  map.c  serde.c
src/time/: stopwatch.c
